--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -22,9 +22,19 @@
       font-family: Arial, Helvetica, sans-serif;
   }
 
+  html, body {
+      height: 100%;
+  }
+
   body {
       margin: 0;
       background-image: url("../images/full-bloom.png");
+      display: flex;
+      flex-direction: column;
+  }
+
+  .everything {
+      flex: 1 0 auto;
   }
 
   .heading-name {
@@ -40,7 +50,7 @@
     margin-top: 20px;
     border: 1px solid rgb(204, 198, 198);
     background-color: whitesmoke;
-    overflow: auto;
+    overflow: scroll;
   }
 
   h2 {
@@ -86,6 +96,7 @@
 
    /* Style the footer */
  footer {
+     flex-shrink: 0;
     padding-top: 50px;
     text-align: center;
     /* bottom: 0;
@@ -97,5 +108,6 @@
     border-top: 15px solid rgb(204, 198, 198);
     /* left: 0; */
     font-family: Arial, Helvetica, sans-serif;
+    /* margin-top: -50px; */
 
   }
