added GifTastic link to portfolio

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,8 +31,15 @@ a:link {
   a:hover {
     overflow: auto;
     clear: both;
+    height: auto;
     background: purple;
     color: white;
+  }
+
+  #portfolio-link:hover {
+      height: auto;
+      overflow: auto;
+      clear: both;
   }
 
 h2 {
